コンパイルを通るようにコード、設定等追加

--- a/cpp2ast/msvc/cpp2ast.vcxproj
+++ b/cpp2ast/msvc/cpp2ast.vcxproj
@@ -54,6 +54,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>$(ProjectDir)\lib\libclang.exp;$(ProjectDir)\lib\libclang.imp;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
