--- a/cs2ast/cs2ast/cs2ast.csproj
+++ b/cs2ast/cs2ast/cs2ast.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Writer\JavaWriter.cs" />
     <Compile Include="Writer\Writer.cs" />
     <Compile Include="Writer\XMLWriter.cs" />
   </ItemGroup>
